# onsei_mojiokoshi

./: README.md  mojiokoshi.py  onsei_mojiokoshi.py  pyproject.toml
src/: display_download_def.py  find_file_def.py  whisper_def.py
